Spanish Translation for Team Change

--- a/core/assets/bundles/bundle_es.properties
+++ b/core/assets/bundles/bundle_es.properties
@@ -802,6 +802,8 @@ rules.title.experimental = Experimental
 rules.lighting = Iluminación
 rules.ambientlight = Iluminación ambiental
 rules.solarpowermultiplier = Multiplicador de Potencia de Panel Solar
+rules.bipartisan.all = Los jugadores pueden cambiar de equipo
+rules.bipartisan.admin = Los administradores pueden cambiar de equipo
 
 content.item.name = Objetos
 content.liquid.name = Líquidos
